ci: fix reference to nonexistent $dir var in ci-comment workflow

--- a/.github/workflows/ci-comment.yml
+++ b/.github/workflows/ci-comment.yml
@@ -65,7 +65,7 @@ jobs:
         run: |
           ls -R
 
-          files=$(find $dir -type f)
+          files=$(find summaries -type f 2>/dev/null || true)
           if [ -z "$files" ]; then
             echo "No files found in dir: $dir"
             exit 0
