fix: improve Linux/macOS clipboard image transfer reliability

--- a/src/unittests/platform/CMakeLists.txt
+++ b/src/unittests/platform/CMakeLists.txt
@@ -1,6 +1,14 @@
 # SPDX-FileCopyrightText: (C) 2025 Deskflow Developers
 # SPDX-License-Identifier: MIT
 
+create_test(
+  NAME ClipboardImageConverterTests
+  DEPENDS platform
+  LIBS base arch
+  SOURCE ClipboardImageConverterTests.cpp
+  WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/src/lib/platform"
+)
+
 if (WIN32)
   create_test(
     NAME MSWindowsClipboardTests
