--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -190,8 +190,9 @@ if(BUILD_INSTALLER)
 endif()
 
 install(
-  FILES ${PROJECT_SOURCE_DIR}/LICENSE
+  FILES ${PROJECT_SOURCE_DIR}/LICENSES/GPL-2.0-only.txt
   DESTINATION ${CMAKE_INSTALL_LICENSE_DIR}
+  RENAME LICENSE
 )
 
 install(
